Fixed some css problems with overflow and heights

--- a/src/app.css
+++ b/src/app.css
@@ -12,9 +12,9 @@ body {
 }
 
 html {
-    max-width: 100vw;
-    margin: 0;
-    padding: 0;
+    scroll-behavior: smooth;
+    scrollbar-color: darkorange black;
+    scrollbar-width: thin;
 }
 
 @keyframes bio {
